include $(top_srcdir)/gnome-doc-utils.make

DOC_ID = orca
DOC_FIGURES = \
	figures/main_window.png \
	figures/orca_find.png \
	figures/orca-logo.png \
	figures/perferences_table_navigation.png \
	figures/preferences_character_echo.png \
	figures/preferences_chat.png \
	figures/preferences_date_and_time.png \
	figures/preferences_disable_gksu_keyboard_grab.png \
	figures/preferences_gecko_find_options.png \
	figures/preferences_gecko_page_navigation.png \
	figures/preferences_key_bindings_table.png \
	figures/preferences_keyboard_layout.png \
	figures/preferences_key_echo.png \
	figures/preferences_magnifier_advanced.png \
	figures/preferences_Orca_modifier_keys.png \
	figures/preferences_present_tooltips.png \
	figures/preferences_profiles.png \
	figures/preferences_pronunciation.png \
	figures/preferences_quit_Orca_without_confirmation.png \
	figures/preferences_show_Orca_main_window.png \
	figures/preferences_speak_object_under_mouse.png \
	figures/preferences_start_Orca_when_you_login.png \
	figures/preferences_table_navigation.png \
	figures/preferences_text_attributes_braille.png \
	figures/preferences_text_attributes_rearranging.png \
	figures/preferences_text_attributes_table.png \
	figures/preferences_word_and_sentence_echo.png \
	figures/profiles_conflict.png \
	figures/profiles_load.png \
	figures/profiles_save_as.png

DOC_PAGES = \
	commands_bookmarks.page \
	commands_braille.page \
	commands_chat.page \
	commands_controlling_orca.page \
	commands_debugging.page \
	commands_find.page \
	commands_flat_review.page \
	commands_live_regions.page \
	commands_magnifier.page \
	commands_mouse.page \
	commands.page \
	commands_reading.page \
	commands_speech_settings.page \
	commands_structural_navigation.page \
	commands_table.page \
	commands_time_date_notifications.page \
	commands_where_am_i.page \
	howto_bookmarks.page \
	howto_documents.page \
	howto_flat_review.page \
	howto_forms.page \
	howto_key_bindings.page \
	howto_keyboard_layout.page \
	howto_learn_modes.page \
	howto_live_regions.page \
	howto_mouse_review.page \
	howto_notifications.page \
	howto_orca_find.page \
	howto_profiles.page \
	howto_setting_up_orca.page \
	howto_structural_navigation.page \
	howto_tables.page \
	howto_text_attributes.page \
	howto_text_setup.page \
	howto_the_orca_modifier.page \
	howto_toggling_caps_lock.page \
	howto_whereami.page \
	index.page \
	introduction.page \
	preferences_braille.page \
	preferences_chat.page \
	preferences_gecko.page \
	preferences_general.page \
	preferences_key_bindings.page \
	preferences_key_echo.page \
	preferences_magnifier.page \
	preferences.page \
	preferences_pronunciation.page \
	preferences_speech.page \
	preferences_table_navigation.page \
	preferences_text_attributes.page

DOC_LINGUAS = hu
dist-hook: doc-dist-hook
